--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </div>
       <div class="attribution">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-        Coded by <a href="#">Your Name Here</a>.
+        Coded by <a href="#">Wasan</a>.
       </div>
     </div>
       <div class="column2">
